--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 /*HOME*/
+
 #home {
   height: 100vh;
 }
@@ -110,6 +111,7 @@ nav ul li {
   header {
     background-size: cover;
     height: 50%;
+    margin-bottom: 2.5rem;
   }
 
   nav {
