--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -492,33 +492,37 @@ li {
   padding: 4vh 0;
 }
 
-#news_container input{
+#news_form{
+  margin:0;
+}
+
+#news_form input{
   font-family: 'first-font';
   font-size: 1rem;
-  width: 96%;
+  width: 100%;
   background: #fff;
   color: #9d9d9d;
   opacity: 0.9;
   border: none;
-  height: 10vh;
-  margin-bottom: 4vh;
+  height: 7vh;
+  margin-bottom: 3vh;
   padding-left: 2vh;
 }
 
-#news_container button{
+#news_btn_container button{
   font-family: 'first-font';
   background-color: #7EC3BB;
   color: white;
   font-size: 1.1rem;
   font-weight: bold;
   width: 25vh;
-  height: 8vh;
+  height: 7vh;
   border: none;
   cursor: pointer;
   transition: 0.3s;
 }
 
-#news_container button:hover{
+#news_btn_container button:hover{
   background-color:#5e8f89;
 }
 
@@ -551,6 +555,10 @@ li {
     width: 190%;
     height: 7.7vh;
     margin-left: 5vh;
+  }
+
+  #news_btn_container button{
+    height: 8vh;
   }
 
   #news hr{
