--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* @media screen and (min-width: 320px) { */
 /*HOME*/
 
 #home {
@@ -7,8 +8,8 @@
 header {
   height: 30%;
   width: 100%;
-  background-image: url(../images/header.jpg);
-  background-size: contain;
+  background-image: url("../images/overlay-pattern2.png"), url("../images/header.jpg");
+  background-size: cover;
   background-repeat: no-repeat;
   display: flex;
   justify-content: center;
@@ -22,33 +23,39 @@ header {
 }
 
 nav {
-  height: 50%;
+  height: 30%;
   width: 90%;
   background-color: #fff;
   opacity: 0.8;
   display: flex;
-  align-items: baseline;
-  justify-content: space-evenly;
+  align-items: center;
+  justify-content: space-between;
   position: absolute;
   bottom: 0;
-  padding-bottom: 1rem;
-  padding-top: 1rem;
+  padding: 0.5rem;
+  z-index: 100;
 }
 
 nav ul {
   position: absolute;
-  top: 53%;
+  top: 100%;
   width: 100%;
   background-color: white;
   line-height: 1.5;
   transition: all 0.5s;
   display: none;
+  padding: 0;
 }
 
 nav ul li {
   display: block;
   background-color: white;
   z-index: 5;
+}
+
+nav ul li a {
+  color: black;
+  text-decoration: none;
 }
 
 #check {
@@ -81,61 +88,37 @@ nav ul li {
   display: flex;
   justify-content: space-between;
 }
-.fa-angle-right {
-  font: normal normal normal 14px/1 FontAwesome;
-  font-size: inherit;
-}
 
 .arrow:hover {
   cursor: pointer;
 }
 
-.gallery {
-  width: 85%;
-  overflow: hidden;
-  border-radius: 0.2rem;
-}
+/* .carousel-indicators {
+  bottom: -50px;
+  color: #ff530a;
+} */
 
-.gallery ul {
-  height: 30vh;
-  width: 100vw;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  transition: margin-left 500ms;
-  font-size: 0;
+.carousel {
+  z-index: 1;
 }
-
-.gallery li {
-  display: inline-block;
-}
-
+/* } */
 /*MEDIA HOME*/
 @media screen and (min-width: 768px) {
   header {
     background-size: cover;
     height: 50%;
-    margin-bottom: 2.5rem;
   }
 
   nav {
-    height: 15%;
+    height: 28%;
     display: flex;
-    align-items: stretch;
-    padding: 1.5rem;
-  }
-  nav img {
-    width: 12rem;
-    height: 2rem;
+    padding: 2.2rem;
   }
 
   nav ul {
     position: relative;
     display: flex;
     justify-content: space-evenly;
-  }
-  nav ul li {
-    position: relative;
   }
 
   nav ul li a {
@@ -150,20 +133,6 @@ nav ul li {
   /*CAROUSEL*/
   #carousel {
     width: 100%;
-  }
-  .gallery ul {
-    width: 100vw;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    height: 100%;
-    display: flex;
-    align-items: baseline;
-  }
-
-  .gallery ul li img {
-    width: 14rem;
-    margin-right: 0.7rem;
   }
 }
 
