--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,55 +147,6 @@ nav ul li {
   color: grey;
 }
 
-/* MEDIA QUERY */
-
-@media screen and (min-width: 768px) {
-
-  /* ABOUT US */
-  #about-us {
-    background-color: #f6f6f6;
-    padding-bottom: 100px;
-  }
-
-  #about-us h1 {
-    font-size: 1.8em;
-  }
-
-  #about-us hr {
-    width: 110px;
-  }
-
-  /* BLOG */
-  .flex-box {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  #section-blog .layer {
-    max-width: 50%;
-  }
-
-  #section-blog img {
-    width: 50%;
-  }
-
-  .flex-box {
-    padding-bottom: 10px;
-  }
-
-}
-
-@media screen and (min-width: 1024px) {
-
-  /* ABOUT US  */
-  #about-us h1 {
-    font-size: 2em;
-  }
-
-  #about-us hr {
-    width: 110px;
-  }
-}
 
 
 /* SECTION BLOG  */
@@ -231,51 +182,86 @@ nav ul li {
   font-size: 15px;
 }
 
-.flex-box {
+.flex-box-blog {
   background-color: white;
-  padding-bottom: 10px;
-  /*modificare nella query */
 }
 
-.flex-box img {
+.flex-box-blog img {
+  width: 100%;
+  height: 100%;
+}
+
+.box-img-blog {
   width: 100%;
 }
 
-.flex-box h3 {
+.flex-box-blog h3 {
   font-size: 1.3rem;
   font-weight: 200;
   margin-top: 0;
 }
 
 
-#tophtre {
-  margin-top: 40px;
+.tophtre {
+  padding-top: 30px;
 }
 
-.box-description {
-  width: 100%;
-  background-color: white;
-}
 
-.box-description h3:nth-of-type(1) {
+.box-description-blog h3:nth-of-type(1) {
   margin-top: 20px;
 }
 
-#section-blog button {
+.box-description-blog-sx h3:nth-of-type(1) {
+  margin-top: 20px;
+}
+
+.flex-box-blog {
+  padding-bottom: 10px;
+}
+
+.section-blog-button button {
   font-family: 'first-font';
-  margin-top: 50px;
+  margin-top: 45px;
   background-color: #ff530a;
-  padding: 30px;
+  padding: 32px;
   float: left;
   border: none;
-  width: 240px;
-
+  width: 260px;
 }
 
 .section-blog-button a {
   color: white;
   text-decoration: none;
   font-size: 1rem;
+  padding: 31px 57px 31px 57px;
+}
+
+/* TRANSITION BLOG */
+
+
+.flex-box-blog img:hover {
+
+  transform: scale(1.2) rotate(10deg);
+  transition: 0.8s ease-out;
+
+}
+
+.box-img-blog {
+  overflow: hidden;
+}
+
+/* TRANSITION BUTTON  */
+
+.section-blog-button button:hover {
+  background: rgba(76, 175, 79, 0);
+  border-radius: 10px;
+  border: 1px solid #ff530a;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.section-blog-button button a:hover {
+  color: #ff530a;
 }
 
 /* SECTION MENU */
@@ -392,4 +378,184 @@ li {
 #menu_btn:hover {
   background-color: #ff530a;
   color: white;
+}
+
+
+/* MEDIA QUERY */
+
+@media screen and (min-width: 768px) {
+
+  /* ABOUT US */
+  #about-us {
+    background-color: #f6f6f6;
+    padding-bottom: 100px;
+  }
+
+  #about-us h1 {
+    font-size: 1.8em;
+  }
+
+  #about-us hr {
+    width: 110px;
+  }
+
+  /* BLOG */
+
+  .br-blog {
+    display: none;
+  }
+
+  #section-blog hr {
+    margin-top: 15px;
+  }
+
+  .flex-box-blog {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+
+  .flex-box-blog {
+    padding-bottom: 0px;
+  }
+
+  .box-img-blog {
+    max-width: 50%;
+
+  }
+
+  .box-description-blog {
+    max-width: 50%;
+  }
+
+  .box-description-blog-sx {
+    max-width: 50%;
+  }
+
+  #section-blog {
+    padding-bottom: 100px;
+  }
+
+  #section-blog h1 {
+    font-size: 2.5rem;
+  }
+
+  #section-blog h3 {
+    padding-bottom: 10px;
+  }
+
+  #section-blog span {
+    font-size: 3rem;
+  }
+
+  #section-blog hr {
+    width: 25%;
+  }
+
+  #section-blog button {
+    float: none;
+    width: 290px;
+    margin-top: 30px;
+    padding: 32px;
+  }
+
+  .box-description-blog h3 {
+    padding-top: 25px;
+  }
+
+  .box-description-blog-sx h3 {
+    padding-top: 25px;
+  }
+
+  /* ADD TRIANGLE BOX DESCIPTION  */
+
+  .box-description-blog {
+    position: relative;
+
+  }
+
+  .box-description-blog-sx {
+    position: relative;
+
+  }
+
+  .box-description-blog::after {
+    content: "";
+    position: absolute;
+    right: 346px;
+    top: 50%;
+    width: 30px;
+    height: 30px;
+    margin-top: -71px;
+    background: #fff;
+    transform: rotate(45deg);
+  }
+
+  .box-description-blog-sx::after {
+    content: "";
+    position: absolute;
+    right: -15px;
+    top: 50%;
+    width: 30px;
+    height: 30px;
+    margin-top: -71px;
+    background: #fff;
+    transform: rotate(45deg);
+  }
+
+  @media screen and (min-width: 1024px) {
+
+    /* ABOUT US  */
+    #about-us h1 {
+      font-size: 2em;
+    }
+
+    #about-us hr {
+      width: 110px;
+    }
+
+    /* BLOG  */
+    #section-blog button {
+      float: right;
+      margin: 0 auto;
+    }
+
+    .box-img-blog {
+      max-width: 25%;
+      height: 212px;
+    }
+
+    .box-description-blog {
+      max-width: 25%;
+      padding-bottom: 71px;
+    }
+
+    .box-description-blog-sx {
+      max-width: 25%;
+      padding-bottom: 71px;
+    }
+
+    /* ADD TRIANGLE BOX DESCIPTION  */
+
+    .box-description-blog {
+      position: relative;
+
+    }
+
+
+
+    .box-description-blog::after {
+      content: "";
+      position: absolute;
+      right: 225px;
+      top: 50%;
+      width: 30px;
+      height: 30px;
+      margin-top: -71px;
+      background: #fff;
+      transform: rotate(45deg);
+    }
+
+
+  }
 }
