--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -297,12 +297,6 @@ nav ul li {
   padding: 6vh 0;
 }
 
-@media screen and (min-width: 1024px) {
-  #block_p {
-    padding: 6vh 20vh
-  }
-}
-
 #menu_container hr {
   width: 35%;
 }
@@ -316,7 +310,7 @@ nav ul li {
 
 /* MENU LIST  */
 
-li p {
+#menu_list li p {
   font-size: 14px;
   line-height: 1.5;
   color: #9d9d9d;
@@ -327,22 +321,22 @@ li p {
   position: relative;
 }
 
-ul {
+#menu_list ul {
   margin-bottom: 5vh;
 }
 
-li div {
+#menu_list li div {
   margin-left: 0 auto;
 }
 
-li span {
+#menu_list li span {
   font-size: 1rem;
   padding-top: 2vh;
   color: #938463;
   display: block;
 }
 
-li h3 {
+#menu_list li h3 {
   background-color: white;
   font-size: 1.5rem;
   margin: 0;
@@ -350,7 +344,7 @@ li h3 {
   position: relative;
 }
 
-li {
+#menu_list li {
   margin: 5vh 0;
 }
 
@@ -362,47 +356,6 @@ li {
   height: 0.1px;
   border: 0.1px dotted #c9c9c9;
   margin-top: 1.5vh;
-}
-
-@media screen and (min-width: 0px) {
-
-  .bottom_border {
-    display: none;
-  }
-
-}
-
-@media screen and (min-width: 768px) {
-
-  li span {
-    float: right;
-    padding-top: 0;
-  }
-}
-
-
-@media screen and (min-width: 768px) {
-
-  .bottom_border {
-    width: 100%;
-    display: block;
-    float: right;
-    margin-top: 3vh;
-  }
-
-  li h3 span {
-    float: right;
-    padding-top: 0;
-  }
-
-  #menu_container span {
-    font-size: 3rem;
-  }
-
-  #menu_container h2 {
-    font-size: 2rem;
-    padding: 10vh 0 5vh 0;
-  }
 }
 
 /* MENU BUTTON */
@@ -423,13 +376,6 @@ li {
   color: #ff530a;
   padding: 4vh 12vh;
   transition: 0.5s;
-}
-
-@media screen and (min-width: 768px) {
-
-  #menu_btn {
-    padding: 5vh 15vh;
-  }
 }
 
 #menu_btn:hover {
@@ -519,60 +465,6 @@ li {
   justify-content: flex-start;
 }
 
-/* NEWS MEDIAQUERY */
-
-@media screen and (min-width:768px) {
-
-  #news_container h2 {
-    font-size: 2.5rem;
-  }
-
-  #news_container span {
-    font-size: 3rem;
-  }
-
-  #news_form {
-    display: inline-flex;
-    width: 100%;
-    justify-content: center;
-    align-items: baseline;
-  }
-
-  #news_form input {
-    width: 190%;
-    height: 7.7vh;
-    margin-left: 5vh;
-  }
-
-  #news_btn_container button {
-    height: 8vh;
-  }
-
-  #news hr {
-    width: 20%;
-  }
-
-}
-
-@media screen and (min-width:1024px) {
-
-  #news_container {
-    padding: 20vh 2vh 10vh 2vh;
-  }
-
-  #news_form {
-    width: 90%;
-  }
-
-  #news_form input {
-    width: 165%;
-  }
-
-  #news hr {
-    width: 15%;
-  }
-
-}
 
 /* CONTACT US SECTION */
 
@@ -636,7 +528,58 @@ li {
 
 /* MEDIA QUERY */
 
+@media screen and (min-width: 0px) {
+
+  /* BARRA MENU  */
+  .bottom_border {
+    display: none;
+  }
+}
+
 @media screen and (min-width: 768px) {
+
+  /*HOME*/
+  header {
+    background-size: cover;
+    height: 50%;
+  }
+
+  nav {
+    height: 24%;
+    display: flex;
+    padding: 1rem;
+  }
+
+  nav ul {
+    position: relative;
+    display: flex;
+    justify-content: space-evenly;
+    background-color: transparent;
+  }
+
+  nav ul li a {
+    text-decoration: none;
+    color: black;
+  }
+
+  .fa-bars {
+    display: none;
+  }
+
+  /*CAROUSEL*/
+  #carousel {
+    width: 100%;
+  }
+
+  .container-flex-carousel {
+    display: inline-block;
+    overflow: auto;
+  }
+
+  .carousel-item {
+    width: 35%;
+    height: 35%;
+  }
 
   /* ABOUT US */
   #about-us {
@@ -735,11 +678,10 @@ li {
   .box-description-blog::after {
     content: "";
     position: absolute;
-    right: 346px;
-    top: 50%;
-    width: 30px;
-    height: 30px;
-    margin-top: -71px;
+    left: -15px;
+    top: 25%;
+    width: 40px;
+    height: 40px;
     background: #fff;
     transform: rotate(45deg);
   }
@@ -748,12 +690,68 @@ li {
     content: "";
     position: absolute;
     right: -15px;
-    top: 50%;
-    width: 30px;
-    height: 30px;
-    margin-top: -71px;
+    top: 25%;
+    width: 40px;
+    height: 40px;
     background: #fff;
     transform: rotate(45deg);
+  }
+
+  /* MENU  */
+  .bottom_border {
+    width: 100%;
+    display: block;
+    float: right;
+    margin-top: 3vh;
+  }
+
+  #menu_list li h3 span {
+    float: right;
+    padding-top: 0;
+  }
+
+  #menu_container span {
+    font-size: 3rem;
+  }
+
+  #menu_container h2 {
+    font-size: 2rem;
+    padding: 10vh 0 5vh 0;
+  }
+
+  /* MENU BTN */
+  #menu_btn {
+    padding: 5vh 15vh;
+  }
+
+  /* NEWS */
+  #news_container h2 {
+    font-size: 2.5rem;
+  }
+
+  #news_container span {
+    font-size: 3rem;
+  }
+
+  #news_form {
+    display: inline-flex;
+    width: 100%;
+    justify-content: center;
+    align-items: baseline;
+  }
+
+  #news_form input {
+    width: 190%;
+    height: 7.7vh;
+    margin-left: 5vh;
+  }
+
+  #news_btn_container button {
+    height: 8vh;
+  }
+
+  #news hr {
+    width: 20%;
   }
 
 }
@@ -800,12 +798,34 @@ li {
   .box-description-blog::after {
     content: "";
     position: absolute;
-    right: 225px;
-    top: 50%;
-    width: 30px;
-    height: 30px;
-    margin-top: -71px;
+    left: -15px;
+    top: 25%;
+    width: 40px;
+    height: 40px;
     background: #fff;
     transform: rotate(45deg);
   }
+
+  /* MENU  */
+  #block_p {
+    padding: 6vh 20vh
+  }
+
+  /* NEWS  */
+  #news_container {
+    padding: 20vh 2vh 10vh 2vh;
+  }
+
+  #news_form {
+    width: 90%;
+  }
+
+  #news_form input {
+    width: 165%;
+  }
+
+  #news hr {
+    width: 15%;
+  }
+
 }
