--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -446,7 +446,7 @@ nav ul li {
 }
 
 #contacts_heading hr {
-  width: 40%;
+  width: 25%;
 }
 
 #contacts_heading h3 {
@@ -470,10 +470,20 @@ nav ul li {
   height: 6vh;
   padding-left: 2vh;
   margin-bottom: 2.5vh;
+  color: #555;
+  border: 1px solid #ccc;
 }
 
 #form textarea {
-  width: 99%;
+  width: 96%;
+  color: #555;
+  border: 1px solid #ccc;
+  padding-left: 2vh;
+  padding-top: 1vh;
+}
+
+#form ::placeholder {
+  font-family: 'first-font';
 }
 
 #contacts button {
@@ -481,9 +491,11 @@ nav ul li {
   color: #fff;
   font-weight: 600;
   border: 0px;
-  width: 92%;
+  width: 100%;
   height: 8vh;
   margin-top: 5vh;
+  height: 5vh;
+  padding-top: 2vh;
 }
 
 /* MEDIA QUERY */
@@ -585,6 +597,29 @@ nav ul li {
   #news hr {
     width: 20%;
   }
+  /* SECTION CONTACT */
+
+  #contacts h2 span{
+    font-size: 3rem;
+  }
+  
+  #contacts h2{
+    font-size: 2rem;
+  }
+
+  #contacts_heading hr {
+    width: 22%;
+  }
+
+  #contact_btn_container{
+    display: flex;
+    justify-content: center;
+    width: 90%;
+  }
+
+  #contact_btn_container button{
+    width: 72%;
+  }
 }
 
 @media screen and (min-width: 1024px) {
@@ -618,5 +653,15 @@ nav ul li {
 
   #news hr {
     width: 15%;
+  }
+
+  #contact_btn_container{
+    display: flex;
+    justify-content: flex-end;
+    width: 89%;
+  }
+
+  #contact_btn_container button{
+    width: 55%;
   }
 }
