--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -655,6 +655,8 @@ nav ul li {
     width: 15%;
   }
 
+
+  /* CONTACT */
   #contact_btn_container{
     display: flex;
     justify-content: flex-end;
