--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,11 +201,13 @@ nav ul li {
   margin-top: 0;
 }
 
-
 .tophtre {
   padding-top: 30px;
 }
 
+.br-blog-due {
+  display: none;
+}
 
 .box-description-blog h3:nth-of-type(1) {
   margin-top: 20px;
@@ -405,6 +407,10 @@ li {
     display: none;
   }
 
+  .br-blog-due {
+    display: none;
+  }
+
   #section-blog hr {
     margin-top: 15px;
   }
@@ -486,6 +492,7 @@ li {
     height: 40px;
     background: #fff;
     transform: rotate(45deg);
+    z-index: 10;
   }
 
   .box-description-blog-sx::after {
@@ -497,6 +504,7 @@ li {
     height: 40px;
     background: #fff;
     transform: rotate(45deg);
+    z-index: 10;
   }
 }
 
@@ -512,6 +520,10 @@ li {
   }
 
   /* BLOG  */
+  #section-blog {
+    padding-bottom: 180px;
+  }
+
   #section-blog button {
     float: right;
     margin: 0 auto;
@@ -524,13 +536,57 @@ li {
 
   .box-description-blog {
     max-width: 25%;
-    padding-bottom: 71px;
+    padding-bottom: 20px;
   }
 
   .box-description-blog-sx {
     max-width: 25%;
-    padding-bottom: 71px;
+    padding-bottom: 40px;
   }
+
+  .flex-box-blog {
+    margin-top: 35px;
+  }
+
+  #section-blog hr:nth-of-type(1) {
+    margin-top: 0;
+    width: 15%;
+  }
+
+  #section-blog .box-description-blog hr {
+    width: 40%;
+  }
+
+  #section-blog .box-description-blog-sx hr {
+    width: 40%;
+  }
+
+  .br-blog,
+  .br-blog-due {
+    display: block;
+  }
+
+  .box-description-blog {
+    line-height: 1.3;
+  }
+
+  .box-description-blog-sx {
+    line-height: 1.3;
+  }
+
+  .box-description-blog p {
+    padding: 0px 20px 0px 20px
+  }
+
+  .box-description-blog-sx p {
+    padding: 0px 20px 0px 20px
+  }
+
+  #section-blog h3 {
+    padding-bottom: 20px;
+  }
+
+
 
   /* ADD TRIANGLE BOX DESCIPTION  */
 
@@ -538,16 +594,31 @@ li {
     position: relative;
   }
 
+  .box-description-blog-sx {
+    position: relative;
+  }
+
   .box-description-blog::after {
     content: "";
     position: absolute;
     left: -15px;
-    top: 25%;
+    top: 40%;
     width: 40px;
     height: 40px;
     background: #fff;
     transform: rotate(45deg);
+    z-index: 10;
   }
 
-
+  .box-description-blog-sx::after {
+    content: "";
+    position: absolute;
+    right: -15px;
+    top: 53%;
+    width: 40px;
+    height: 40px;
+    background: #fff;
+    transform: rotate(45deg);
+    z-index: 10;
+  }
 }
