--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -390,17 +390,18 @@ nav ul li {
 
 #news_form {
   margin: 0;
+  text-align: left;
 }
 
 #news_form input {
   font-family: "first-font";
   font-size: 1rem;
-  width: 100%;
+  width: 103%;
   background: #fff;
   color: #9d9d9d;
   opacity: 0.9;
   border: none;
-  height: 7vh;
+  height: 9vh;
   margin-bottom: 3vh;
   padding-left: 2vh;
 }
@@ -411,8 +412,8 @@ nav ul li {
   color: white;
   font-size: 1.1rem;
   font-weight: bold;
-  width: 25vh;
-  height: 7vh;
+  width: 34vh;
+  height: 10vh;
   border: none;
   cursor: pointer;
   transition: 0.3s;
@@ -578,20 +579,20 @@ nav ul li {
   }
 
   #news_form {
-    display: inline-flex;
+    display: inline-block;
+    text-align: center;
     width: 100%;
-    justify-content: center;
-    align-items: baseline;
+    font-size: 0;
   }
 
   #news_form input {
-    width: 190%;
-    height: 7.7vh;
-    margin-left: 5vh;
+    width: 60%;
+    height: 10vh;
   }
 
   #news_btn_container button {
-    height: 8vh;
+    display: inline;
+    height: 10.5vh;
   }
 
   #news hr {
@@ -648,7 +649,7 @@ nav ul li {
   }
 
   #news_form input {
-    width: 165%;
+    width: 60%;
   }
 
   #news hr {
