--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -590,8 +590,11 @@ nav ul li {
     height: 10vh;
   }
 
-  #news_btn_container button {
+  #news_btn_container{
     display: inline;
+  }
+
+  #news_btn_container button {
     height: 10.5vh;
   }
 
