--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,6 @@ nav ul li a {
   cursor: pointer;
 }
 
-/* Slideshow container */
 .slideshow-container-query {
   display: none;
 }
@@ -96,12 +95,9 @@ nav ul li a {
   margin: auto;
 }
 
-/* Hide the images by default */
 .mySlides {
   display: none;
 }
-
-/* Next & previous buttons */
 
 .next {
   cursor: pointer;
@@ -109,27 +105,17 @@ nav ul li a {
   border: none;
   font-size: 1.8rem;
   color: #aa9d84;
-  /* transition: 0.6s ease; */
+  transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
 }
-
-.mySlides img {
-  width: 100%;
-  height: 20%;
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
+.mySlides {
   text-align: center;
 }
+.mySlides img {
+  max-width: 22rem;
+  height: 18rem;
+}
 
-/* Number text (1/3 etc) */
 .numbertext {
   color: #f2f2f2;
   font-size: 12px;
@@ -138,8 +124,16 @@ nav ul li a {
   top: 0;
 }
 
-/* The dots/bullets/indicators */
-.dot {
+#dot-slider {
+  text-align: center;
+}
+
+#dot-slider-query {
+  display: none;
+}
+
+.dot,
+.dot-query {
   cursor: pointer;
   height: 15px;
   width: 15px;
@@ -150,7 +144,8 @@ nav ul li a {
   transition: background-color 0.6s ease;
 }
 
-.dot:hover {
+.dot:hover,
+.dot-query:hover {
   background-color: #ff530a;
 }
 
@@ -604,16 +599,17 @@ nav ul li a {
   }
 
   nav {
-    height: 24%;
     display: flex;
-    padding: 1rem;
+    height: 14%;
+    align-items: baseline;
   }
 
   nav ul {
-    position: relative;
     display: flex;
     justify-content: space-evenly;
     background-color: transparent;
+    position: relative;
+    top: 0;
   }
 
   nav ul li a {
@@ -630,19 +626,19 @@ nav ul li a {
     display: none;
   }
   .slideshow-container-query {
-    display: block;
+    display: inline;
     max-width: 1000px;
-    position: relative;
     margin: auto;
   }
 
-  /* Hide the images by default */
+  .container-slides-query {
+    text-align: center;
+  }
+
   .mySlides {
     display: flex;
     flex-direction: row;
   }
-
-  /* Next & previous buttons */
 
   .next {
     cursor: pointer;
@@ -650,13 +646,20 @@ nav ul li a {
     border: none;
     font-size: 1.8rem;
     color: #aa9d84;
-    /* transition: 0.6s ease; */
+    transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
   }
 
   .mySlides img {
     width: 40%;
     height: 20%;
+  }
+  #dot-slider {
+    display: none;
+  }
+  #dot-slider-query {
+    display: block;
+    text-align: center;
   }
 
   /* ABOUT US */
