--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
 }
 
 header {
-  height: 30%;
+  height: 20%;
   width: 100%;
   background-image: url("../images/overlay-pattern2.png"), url("../images/header.jpg");
   background-size: cover;
@@ -21,7 +21,7 @@ header {
 }
 
 nav {
-  height: 30%;
+  height: 50%;
   width: 90%;
   background-color: #fff;
   opacity: 0.8;
@@ -54,6 +54,12 @@ nav ul li {
 nav ul li a {
   color: black;
   text-decoration: none;
+  line-height: 2.5;
+  font-weight: 500;
+}
+
+nav ul li a:hover {
+  border-bottom: 2px solid #ff530a;
 }
 
 #check {
@@ -70,15 +76,23 @@ nav ul li a {
 }
 
 .fa-bars {
+  font-size: x-large;
   color: #ff530a;
 }
 
 /*CAROUSEL*/
 
 #carousel-title {
+  margin-top: 3.5rem;
+  margin-bottom: 1.5rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+#btn-next {
+  border: none;
+  background-color: white;
 }
 
 .arrow:hover {
@@ -112,16 +126,8 @@ nav ul li a {
   text-align: center;
 }
 .mySlides img {
-  max-width: 22rem;
-  height: 18rem;
-}
-
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
+  max-width: 25rem;
+  max-height: 12rem;
 }
 
 #dot-slider {
@@ -135,13 +141,14 @@ nav ul li a {
 .dot,
 .dot-query {
   cursor: pointer;
-  height: 15px;
-  width: 15px;
+  height: 0.8rem;
+  width: 0.8rem;
   margin: 0 2px;
   background-color: #bbb;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
+  margin-bottom: 3rem;
 }
 
 .dot:hover,
@@ -595,12 +602,12 @@ nav ul li a {
   /*HOME*/
   header {
     background-size: cover;
-    height: 50%;
+    height: 25%;
   }
 
   nav {
     display: flex;
-    height: 14%;
+    height: 22%;
     align-items: baseline;
   }
 
@@ -622,6 +629,16 @@ nav ul li a {
   }
 
   /*CAROUSEL*/
+
+  #carousel-title {
+    margin-top: 2rem;
+    margin-bottom: 1.5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+  }
+
   .slideshow-container {
     display: none;
   }
