--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -527,6 +527,149 @@ nav ul li a {
   padding-top: 2vh;
 }
 
+/* SECTION FOOTER  */
+
+#section-footer-container-info {
+  margin-left: 0;
+}
+
+
+.section-footer-container-img {
+  margin-left: 0;
+}
+
+#section-footer-info {
+  display: flex;
+  flex-direction: column;
+  line-height: 1.5;
+}
+
+#section-footer-info p {
+  color: grey;
+}
+
+.info-title-cont {
+  font-size: 20px;
+  padding-bottom: 35px;
+  padding-top: 60px;
+  font-weight: 400;
+}
+
+.info-title-cont-follow {
+  padding-bottom: 10px;
+}
+
+.title-cont {
+  display: inline-block;
+  color: #ff530a;
+  font-size: 1.1rem;
+}
+
+.fa-phone,
+.fa-location-dot {
+  font-size: 1.1rem;
+  color: #676767;
+  margin-right: 25px;
+}
+
+.fa-envelope {
+  font-size: 1.3rem;
+  color: #676767;
+  margin-right: 25px;
+}
+
+.data-info-footer {
+  font-size: 1.3rem;
+}
+
+.data-info-footer-due {
+  font-size: 1.3rem;
+  padding-top: 15px;
+}
+
+
+.container-info-contact {
+  margin-left: 0;
+  padding-bottom: 20px;
+  line-height: 2;
+}
+
+.container-info-contact-due {
+  margin-left: 0;
+  line-height: 1.5;
+  font-size: 0.9rem;
+}
+
+.brands-container {
+  display: flex;
+  padding-bottom: 120px;
+  margin-left: 0;
+  width: 250px;
+}
+
+.footer-social {
+  margin-right: 10px;
+  border-radius: 30px;
+}
+
+.backg-container-brands {
+  background-color: #b0b0b0;
+  width: 40px;
+  height: 40px;
+  justify-content: center;
+  border-radius: 50%;
+  margin-left: 0;
+}
+
+
+.fa-twitter,
+.fa-facebook-f,
+.fa-twitter,
+.fa-behance {
+  padding: 10px;
+  color: white;
+  font-size: 1.2rem;
+}
+
+#footer-copywrite {
+  width: 100%;
+  background-color: #e9e9e9;
+  padding-top: 30px;
+  padding-bottom: 25px;
+}
+
+#footer-copywrite p {
+  font-size: 0.9rem;
+  text-align: center;
+  justify-content: center;
+  color: grey;
+}
+
+#footer-copywrite span {
+  font-size: 1.1rem;
+}
+
+.section-footer-container-img-flex {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.section-footer-container-img-flex img:nth-of-type(1) {
+  margin: 5px;
+}
+
+.section-footer-container-img-flex img:nth-of-type(2) {
+  margin: 5px;
+}
+
+.section-footer-container-img-flex img:nth-of-type(3) {
+  margin: 5px;
+}
+
+.section-footer-container-img-flex img:nth-of-type(4) {
+  margin: 5px;
+}
+
 /* MEDIA QUERY */
 
 @media screen and (min-width: 0px) {
@@ -797,6 +940,21 @@ nav ul li a {
   #contact_btn_container button {
     width: 72%;
   }
+
+  /* FOOTER  */
+
+  .container-info-contact {
+    display: flex;
+    margin: auto;
+  }
+
+  .container-info-contact-due {
+    margin-left: 0;
+  }
+
+  .br-footer {
+    display: none;
+  }
 }
 
 
@@ -947,5 +1105,21 @@ nav ul li a {
 
   #contact_btn_container button {
     width: 55%;
+  }
+
+  /* FOOTER  */
+  #section-footer-info {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .container-info-contact {
+    display: flex;
+    margin: 0 auto;
+    flex-direction: column;
+  }
+
+  .br-footer {
+    display: none;
   }
 }
