--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@ nav ul li a {
   display: none;
 }
 
-#check:checked ~ ul {
+#check:checked~ul {
   display: block;
   bottom: -100;
 }
@@ -163,6 +163,7 @@ nav ul li a {
   from {
     opacity: 0.4;
   }
+
   to {
     opacity: 1;
   }
@@ -598,6 +599,7 @@ nav ul li a {
 }
 
 @media screen and (min-width: 768px) {
+
   /*HOME*/
   header {
     background-size: cover;
@@ -630,6 +632,7 @@ nav ul li a {
   .slideshow-container {
     display: none;
   }
+
   .slideshow-container-query {
     display: block;
     max-width: 1000px;
@@ -827,7 +830,7 @@ nav ul li a {
     height: 10vh;
   }
 
-  #news_btn_container{
+  #news_btn_container {
     display: inline;
   }
 
@@ -865,6 +868,7 @@ nav ul li a {
 }
 
 @media screen and (min-width: 1024px) {
+
   /* ABOUT US  */
   #about-us h2 {
     font-size: 2em;
@@ -1007,5 +1011,34 @@ nav ul li a {
 
   #contact_btn_container button {
     width: 55%;
+  }
+}
+
+/* ANIMATION FADE */
+.reveal {
+  position: relative;
+  transform: translateY(150px);
+  opacity: 0;
+  transition: 0.8s all ease;
+}
+
+.reveal.active {
+  transform: translateY(0);
+  opacity: 1;
+}
+
+.active.fade-left {
+  animation: fade-left 0.8s ease-in;
+}
+
+@keyframes fade-left {
+  0% {
+    transform: translateX(-150px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateX(0);
+    opacity: 1;
   }
 }
