--- a/assets/css/mediaquery.css
+++ b/assets/css/mediaquery.css
@@ -32,6 +32,27 @@
     color: black;
   }
 
+  ul li:first-child {
+    width: auto;
+  }
+
+  .border-button-nav:hover {
+    width: auto;
+    animation-name: loading-query;
+    animation-duration: 0.1s;
+    animation-timing-function: linear;
+  }
+
+  @keyframes loading-query {
+    0% {
+      width: 0%;
+    }
+
+    100% {
+      width: auto;
+    }
+  }
+
   .fa-bars {
     display: none;
   }
@@ -498,7 +519,6 @@
     flex-direction: column;
   }
 
-
   /* FOOTER */
   .br-footer {
     display: none;
@@ -510,34 +530,33 @@
 }
 
 @media screen and (min-width: 1200px) {
-    .box-description-blog{
-         padding-bottom:0;
-    }
+  .box-description-blog {
+    padding-bottom: 0;
+  }
 
-    #section-blog p {
-        padding-bottom: 20px;
-    }
+  #section-blog p {
+    padding-bottom: 20px;
+  }
 
-    .box-img-blog {
-        height: 28vh;
-        max-height: 277px;
-    }
+  .box-img-blog {
+    height: 28vh;
+    max-height: 277px;
+  }
 
-    #section-blog p {
-        padding-bottom: 0;
-    }
+  #section-blog p {
+    padding-bottom: 0;
+  }
 
-    #news_form {
-        max-width:1771px;
-        width: 90%;
-    }
+  #news_form {
+    max-width: 1771px;
+    width: 90%;
+  }
 
-    #news_form input {
-        width: 40%;
-    }
+  #news_form input {
+    width: 40%;
+  }
 
-    #news_btn_container button {
-        width: 16vw
-    }
-   
+  #news_btn_container button {
+    width: 16vw;
+  }
 }
